# axiom-svn-mirror-old

./: CHANGELOG  ChangeLog  ChangeLog.build-improvements  ChangeLog.gdr-sandbox  ChangeLog.silver  ChangeLog.wh  FAQ  Makefile  Makefile.in  Makefile.pamphlet  README  README.build-improvements  README.gdr-sandbox  README.wh  build-setup.sh  changelog  configure  configure.ac  configure.ac.pamphlet  readme
PATCH49-50/: CHANGELOG.patch  Makefile.pamphlet.patch  Makefile.patch  PATCHES  configure.patch  lsp.Makefile.pamphlet.patch  src.algebra.perm.spad.pamphlet.patch  src.doc.DeveloperNotes.pamphlet.patch  src.doc.Makefile.pamphlet.patch  src.doc.book.pamphlet.patch  src.doc.bookvol1.pamphlet.patch  src.graph.view2D.Makefile.pamphlet.patch  src.hyper.Makefile.pamphlet.patch  src.hyper.token.pamphlet.patch  src.input.zimmer.input.pamphlet.patch  src.interp.Makefile.pamphlet.patch  src.interp.cfuns.lisp.pamphlet.patch  src.interp.debugsys.lisp.pamphlet.patch  src.interp.hash.lisp.pamphlet.patch  src.interp.patches.lisp.pamphlet.patch  src.interp.sockio.lisp.pamphlet.patch  src.lib.bsdsignal.c.pamphlet.patch  src.scripts.Makefile.pamphlet.patch  src.scripts.tex.axiom.sty.patch  src.share.doc.hypertex.pages.util.ht.patch  zips.gcl-2.6.1.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.2.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.2a.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.3.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.5.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.5w.cmpnew.gcl_cmpflet.lsp.patch.patch  zips.gcl-2.6.6.cmpnew.gcl_cmpflet.lsp.patch.patch
axiom/: CHANGELOG  ChangeLog  FAQ  Makefile  Makefile.pamphlet  README  configure
axiom/lsp/: ChangeLog  Makefile.pamphlet
axiom/src/: Makefile.pamphlet
axiom/zips/: ChangeLog  gcl-2.6.7pre.cmpnew.gcl_cmpflet.lsp.patch
books/: bookvol4.pamphlet
config/: axiom-c-macros.h.in  axiom.m4  setup-dep.mk  var-def.mk
gcl/gcl-tk/: tkMain.c  tkXAppInit.c  tkXshell.c
gcl/gmp3/: ansi2knr.c  configure.in  mkinstalldirs
gcl/h/: symmetry.defs  symmetry.h
gcl/lsp/: gcl_loop.lsp
gcl/windows/: gcl.iss.in
lsp/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet
noweb/: CHANGES  DATE  Makefile  README
src/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet
src/algebra/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  aggcat2.spad.pamphlet  algfact.spad.pamphlet  algfunc.spad.pamphlet  alql.spad.pamphlet  carten.spad.pamphlet  catdef.spad.pamphlet  clifford.spad.pamphlet  clip.spad.pamphlet  cmplxrt.spad.pamphlet  color.spad.pamphlet  combfunc.spad.pamphlet  combinat.spad.pamphlet  complet.spad.pamphlet  constant.spad.pamphlet  cont.spad.pamphlet  contfrac.spad.pamphlet  coordsys.spad.pamphlet  cra.spad.pamphlet  crfp.spad.pamphlet  exposed.lsp.pamphlet  files.spad.pamphlet  float.spad.pamphlet  fspace.spad.pamphlet  mantepse.spad.pamphlet  naalg.spad.pamphlet  newdata.spad.pamphlet  numtheor.spad.pamphlet  perm.spad.pamphlet  pgcd.spad.pamphlet  polycat.spad.pamphlet  retract.spad.pamphlet  sets.spad.pamphlet  sf.spad.pamphlet  string.spad.pamphlet  sttaylor.spad.pamphlet  transsolve.spad.pamphlet  (+2 more)
src/booklets/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet
src/boot/: ChangeLog.build-improvements  ChangeLog.gdr-sandbox  Makefile.in  Makefile.pamphlet  ast.boot.pamphlet  btincl2.boot.pamphlet  btpile2.boot.pamphlet  btscan2.boot.pamphlet  includer.boot.pamphlet  initial-env.lisp.pamphlet  parser.boot.pamphlet  pile.boot.pamphlet  ptyout.boot.pamphlet  scanner.boot.pamphlet  tokens.boot.pamphlet  translator.boot.pamphlet  typars.boot.pamphlet  typrops.boot.pamphlet  tytree1.boot.pamphlet
src/clef/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  edible.c.pamphlet
src/doc/: ChangeLog  ChangeLog.build-improvements  DeveloperNotes.pamphlet  Makefile.in  Makefile.pamphlet  Rosetta.pamphlet  axiom.bib.pamphlet  axiom.sty.pamphlet  book.pamphlet  bookvol1.pamphlet  endpaper.pamphlet
src/etc/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  asq.c.pamphlet
src/graph/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  bookvol8.pamphlet
src/hyper/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  ReadBitmap.pamphlet  addfile.pamphlet  bookvol7.pamphlet  cond.pamphlet  debug.pamphlet  dialog.pamphlet  display.pamphlet  event.pamphlet  ex2ht.pamphlet  extent1.pamphlet  extent2.pamphlet  form-ext.pamphlet  form_ext.pamphlet  group.pamphlet  halloc.pamphlet  hash.pamphlet  htadd.pamphlet  hterror.pamphlet  hthits.pamphlet  htinp.pamphlet  hyper.pamphlet  initx.pamphlet  input.pamphlet  item.pamphlet  keyin.pamphlet  lex.pamphlet  macro.pamphlet  mem.pamphlet  parse-aux.pamphlet  parse-input.pamphlet  parse-paste.pamphlet  parse-types.pamphlet  parse.pamphlet  parse_aux.pamphlet  parse_input.pamphlet  parse_paste.pamphlet  parse_types.pamphlet  (+6 more)
src/include/: XSpadFill.H1  addfile.H1  bsdsignal.h  cfuns-c.H1  com.h  dialog.H1  event.H1  extent1.H1  form_ext.H1  halloc.H1  hash.H1  htadd.H1  item.H1  mem.H1  openpty.H1  parse_aux.H1  parse_paste.H1  pixmap.H1  prt.H1  session.H1  show_types.H1  spadbuf.H1  spadclient.H1
src/input/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  algaggr.input.pamphlet  algbrbf.input.pamphlet  alist.input.pamphlet  arith.input.pamphlet  array2.input.pamphlet  as-eg5.input.pamphlet  as-eg6.input.pamphlet  aseg6.as.pamphlet  assign.input.pamphlet  axiom.input.pamphlet  bags.input.pamphlet  bern.input.pamphlet  binary.input.pamphlet  bouquet.input.pamphlet  bstree.input.pamphlet  bug10069.input.pamphlet  bug9057.input.pamphlet  c02aff.input.pamphlet  c02agf.input.pamphlet  c06fpf.input.pamphlet  c06fuf.input.pamphlet  c06gcf.input.pamphlet  c06gsf.input.pamphlet  calculus2.input.pamphlet  card.input.pamphlet  cardinal.input.pamphlet  carten.input.pamphlet  char.input.pamphlet  clif.input.pamphlet  clifford.input.pamphlet  (+239 more)
zips/: ChangeLog  ChangeLog.build-improvements  noweb.src.Makefile.patch
(+1171 files in other folders)
